--- a/BlazorApp/Shared/NavMenu.razor
+++ b/BlazorApp/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="login">
-                <span class="oi oi-book" aria-hidden="true"></span> Login
+                <span class="oi oi-account-login" aria-hidden="true"></span> Login
             </NavLink>
         </li>
 
@@ -33,7 +33,7 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="createissue">
-                <span class="oi oi-badge" aria-hidden="true"></span> Create Issue
+                <span class="oi oi-plus" aria-hidden="true"></span> Create Issue
             </NavLink>
         </li>
 
